WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180840
Fix assertion in JSObject's structure setting methods
https://bugs.webkit.org/show_bug.cgi?id=180840
Summary
Fix assertion in JSObject's structure setting methods
Keith Miller
Reported
2017-12-14 14:21:31 PST
Fix assertion in JSObject's structure setting methods
Attachments
Patch
(2.55 KB, patch)
2017-12-14 14:23 PST
,
Keith Miller
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-12-14 14:23:43 PST
Created
attachment 329404
[details]
Patch
Mark Lam
Comment 2
2017-12-14 14:25:57 PST
Comment on
attachment 329404
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329404&action=review
r=me
> Source/JavaScriptCore/ChangeLog:9 > + added to them they call the generic code. The generic code
Please add a comma between "them they".
Keith Miller
Comment 3
2017-12-14 14:29:01 PST
Addressed comments and landed in:
https://trac.webkit.org/r225933
Radar WebKit Bug Importer
Comment 4
2017-12-14 14:31:28 PST
<
rdar://problem/36058568
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug