Fix assertion in JSObject's structure setting methods https://bugs.webkit.org/show_bug.cgi?id=180840

Reviewed by Mark Lam.

I forgot that when Typed Arrays have non-indexed properties
added to them, they call the generic code. The generic code
in turn calls the regular structure setting methods. Thus,
these assertions were invalid and we should just avoid setting
the indexing mask if we have a Typed Array.

* runtime/JSObject.h:
(JSC::JSObject::setButterfly):
(JSC::JSObject::nukeStructureAndSetButterfly):

Canonical link: https://commits.webkit.org/196731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225933 268f45cc-cd09-0410-ab3c-d52691b4dbfc